Alignment of Comment box and attachment box is done on Reconciliation

--- a/angular/src/app/main/checklist/task-details/task-details.component.html
+++ b/angular/src/app/main/checklist/task-details/task-details.component.html
@@ -167,12 +167,12 @@
                                             </ul>
                                         </div>
 
-                                <!-- <div class="btnMargin">
+                                 <div class="btnMargin">
                                     <button class="btn btn-brand"
                                         (click)="onComment()">{{"Comment" | localize}}</button>
-                                    <button class="btn btn-brand"
-                                        (click)="onCancelComment()">{{"Cancel" | localize}}</button>
-                                </div> -->
+                                    <!-- <button class="btn btn-brand"
+                                        (click)="onCancelComment()">{{"Cancel" | localize}}</button> -->
+                                </div> 
 
                             </div>
                         </div>
