--- a/angular/src/app/main/reconcilliation/amortized/create-edit-amortized/create-edit-amortized.component.css
+++ b/angular/src/app/main/reconcilliation/amortized/create-edit-amortized/create-edit-amortized.component.css
@@ -72,8 +72,8 @@ label{
 color: #606060;
 }
 ::ng-deep .uppy-Dashboard-inner {
-    min-height:220px !important;
-    height: 220px !important;
+    min-height:273px !important;
+    height: 273px !important;
     
 }
 ::ng-deep table.days.weeks th:first-child, ::ng-deep table.days.weeks td:first-child {
@@ -121,3 +121,50 @@ color: #606060;
     display: inline-block;
     vertical-align: middle;
 }
+
+.compress{
+    width: 22px !important;
+}
+
+
+.chat-wrapper-inner{
+    background-color: #E8E8E8;
+    padding: 2px 10px;
+    margin-top: 5px;
+}
+.docx-btn{
+        display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.chat-wrapper{
+    
+    padding :0px 30px !important;
+    overflow-y: auto;
+}
+
+ul, ul li {
+    -webkit-transform: scaleY(-1);
+       -moz-transform: scaleY(-1);
+        -ms-transform: scaleY(-1);
+         -o-transform: scaleY(-1);
+            transform: scaleY(-1);
+    
+    }
+    ul {
+        list-style: none;
+        width: 100%;
+        padding :0px;
+        margin:0px;
+        border:none;
+    }
+     li {
+        width: 100%;
+        padding :0px;
+        margin:0px;
+        border:none;
+        *display: inline;
+    }
+/* .drop_down_arrow {
+    margin-left: 135px;
+} */
