--- a/angular/src/app/main/reconcilliation/amortized/amortized.component.css
+++ b/angular/src/app/main/reconcilliation/amortized/amortized.component.css
@@ -563,6 +563,9 @@
         font-weight: bold;
         margin-right: 10px;
     }
+    .accountName-cell{
+        cursor: pointer;
+    }
     .task-box {
         /* padding: 2px 20px; */
         border-radius: 20px;
@@ -570,6 +573,7 @@
         position: relative;
         word-break: break-all;
         color: #575962;
+
     }
     .task-report-form{
         width: 100px;
@@ -838,9 +842,11 @@
     }
     @media only screen and (max-width:1900px){
         .table-row-collapsible .accountSubtype-cell{
+            cursor: pointer;
             display: none;
         }
         .table-row-collapsible .assignee-cell{
+            cursor: pointer;
             display: none;
         }
     .table-row-collapsible{
@@ -855,6 +861,7 @@
     }
     
     .table-row-collapsible  .reconciliation-cell{
+        cursor:pointer;
         display: none;
     }
     .table-row-collapsible  .action-cell{
@@ -866,9 +873,11 @@
     }
     @media only screen and (max-width:1600px){
         .assignee-cell {
+            cursor: pointer;
             width: 250px;
         }
         .accountSubtype-cell{
+            cursor: pointer;
             width: 200px;
             display: table-cell;
         }
@@ -901,30 +910,38 @@
     
     @media only screen and (max-width:1470px){
         .assignee-cell{
+            cursor: pointer;
             display: none;
         }
         .table-row-collapsible  .assignee-cell{
+            cursor: pointer;
         display: flex;
         }
         .accountType-cell{
+            cursor:pointer;
             width:160px !important;
         }
         .accountSubtype-cell{
+            cursor: pointer;
             width: 180px !important;
         }
         .reconciliation-cell{
+            cursor:pointer;
             display: table-cell;
         }
         .table-row-collapsible .reconciliation-cell{
+            cursor:pointer;
             display: none;
         }
     }   
     @media only screen and (max-width:1279px){
         
         .reconciliation-cell{
+            cursor:pointer;
             display: none;
             }
             .table-row-collapsible  .reconciliation-cell{
+                cursor:pointer;
                 display: flex;
             }
         .table-row-collapsible{
@@ -938,6 +955,8 @@
             display: flex;
         }
         .accountNo-cell {
+            
+            cursor:pointer;
             width: 120px;
         }
         
@@ -1079,6 +1098,7 @@
         background-color: #F1F2FC ;
     }
     .accountNo-cell{
+        cursor:pointer;
         width: 160px;
     }
     .accountNo-cell span {
@@ -1088,15 +1108,19 @@
         cursor: pointer;
     }
     .accountSubtype-cell {
+        cursor: pointer;
         width: 200px;
     }
     .reconciliation-cell{
+        cursor:pointer;
         width: 220px;
     }
     .accountType-cell{
+        cursor:pointer;
         width: 170px;
     }
     .assignee-cell {
+        cursor: pointer;
         width:260px;
     } 
     
