--- a/angular/src/app/main/reconcilliation/itemized/itemized.component.html
+++ b/angular/src/app/main/reconcilliation/itemized/itemized.component.html
@@ -111,13 +111,13 @@
                         <table class="table record-table">
                             <tbody *ngFor="let item of itemList">
                                 <tr  class="task-table-inner table-repeater" class="{{item.isDeleted == true ? 'warnning' : '' }}">
-                                    <td class="accountNo-cell" (click)="RedirectToDetail(item.id)">
+                                    <td class="accountNo-cell" style="cursor:pointer" data-toggle="tooltip" title="Show Details" (click)="RedirectToDetail(item.id)">
                                         <span class="">{{item.date | date}}</span>
                                     </td>
-                                    <td class="accountName-cell" (click)="RedirectToDetail(item.id)">
+                                    <td class="accountName-cell" style="cursor:pointer" data-toggle="tooltip" title="Show Details" (click)="RedirectToDetail(item.id)">
                                         <span class="task-box">{{item.description}}</span>
                                     </td>
-                                    <td class="reconciliation-cell" (click)="RedirectToDetail(item.id)">
+                                    <td class="reconciliation-cell" style="cursor:pointer" data-toggle="tooltip" title="Show Details" (click)="RedirectToDetail(item.id)">
                                         <span class="">{{item.amount | formater }}</span>
                                     </td>
                                     <td class="action-cell" >
