--- a/angular/src/app/main/reconcilliation/amortized/amortized-details/amortized-details.component.html
+++ b/angular/src/app/main/reconcilliation/amortized/amortized-details/amortized-details.component.html
@@ -111,7 +111,7 @@
                                 <div [ngClass]="{'disabled':!monthStatus}" class="form-group" >
                                     <label>{{"Comments" | localize}}</label>
                                     <input hidden type="file" (change)="uploadCommentFile($event)" #commentFile>        
-                                    <div class="border-left border-right border-bottom">
+                                    <div class="border-left border-right border-bottom rounded">
                                         <p-editor [(ngModel)]="comment" (keydown.space)="$event.preventDefault();"name="HtmlEditorInput" 
                                                         [style]="{'height':'230px','border':'none'}">
                                                             <p-header>
