--- a/angular/src/app/main/reconcilliation/amortized/amortized.component.css
+++ b/angular/src/app/main/reconcilliation/amortized/amortized.component.css
@@ -1107,6 +1107,9 @@
         word-break: break-all;
         cursor: pointer;
     }
+    .toggle-btn-cell {
+        width:37px;
+    }
     .accountSubtype-cell {
         cursor: pointer;
         width: 200px;
