--- a/angular/src/app/main/account/accounts/accounts.component.css
+++ b/angular/src/app/main/account/accounts/accounts.component.css
@@ -372,7 +372,7 @@ form.search-form input::after{
 } */
 .record-table th,
 .record-table td{
-    padding: 10px 26px;
+    padding: 10px -5px;
     vertical-align: middle;
 }
 .record-table th{
@@ -572,7 +572,9 @@ form.assignee-info-form input{
     border-bottom: 1px solid #f1f2fc;
 }
 
-
+.toggle-btn-cell {
+    width: 37px;
+}
 .record-card-header .btn.btn-light{
     background-color: #f8f9fa;
     border-color: #f8f9fa;
@@ -675,8 +677,9 @@ table.table.record-table td, table.table.record-table th {
     display: flex;
 }
 .toggle-btn-cell .taggle-btn{
-    display: table-cell;
-    }
+    margin-left: 10px;
+    display: block;
+}
 }
 @media only screen and (max-width:1600px){
     .assignee-cell {
@@ -698,6 +701,7 @@ table.table.record-table td, table.table.record-table th {
    }
    .toggle-btn-cell .taggle-btn{
        display: table-cell;
+       margin-left: 10px;
    }
    .table-row-collapsible{
     display: table-row;
@@ -755,6 +759,7 @@ table.table.record-table td, table.table.record-table th {
     }
     .toggle-btn-cell .taggle-btn{
         display: table-cell;
+        margin-left: 10px;
     }
     .category-selector{
         width: 150px;
