--- a/angular/src/app/main/account/accounts/accounts.component.html
+++ b/angular/src/app/main/account/accounts/accounts.component.html
@@ -322,7 +322,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="primeng-paging-container">
+                    <div class="primeng-paging-container" style="margin:0px -5px">
                         <div class="table-box">
 
                             <!--<Primeng-TurboTable-Start>-->
