--- a/angular/src/app/main/checklist/createtask/createtask.component.html
+++ b/angular/src/app/main/checklist/createtask/createtask.component.html
@@ -189,7 +189,7 @@
                                     <div class="form-group ">
                                         <label>{{"Comments" | localize}}</label>
                                         <input hidden type="file" (change)="uploadCommentFile($event)" #commentFile>
-                                        <div class="form-group border-bottom border-right border-left">
+                                        <div class="form-group rounded border-bottom border-right border-left">
                                             <p-editor [(ngModel)]="checklist.commentBody"
                                                 (keydown.space)="$event.preventDefault();" required name="HtmlEditorInput" 
                                                 [style]="{'height':'230px','border':'none'}">
@@ -266,7 +266,7 @@
                     <div class="row">
                         <div class="col-md-10 form-group">
                             <label class="bg-color">{{"Instruction" | localize}}</label>
-                            <div class="form-group border-bottom border-right border-left">
+                            <div class="form-group border-bottom border-right border-left rounded">
                                 <input hidden type="file" (change)="uploadFile($event)" #insturctionFile>
                                 <p-editor [(ngModel)]="checklist.instruction" required name="HtmlEditorInput"
                                     [style]="{'height':'230px','border':'none'}">
