--- a/angular/src/app/main/reconcilliation/amortized/amortized.component.html
+++ b/angular/src/app/main/reconcilliation/amortized/amortized.component.html
@@ -62,7 +62,7 @@
                         </div>
                     </form>
 
-                    <div class="primeng-paging-container">
+                    <div class="primeng-paging-container" style="margin:0px -10px">
                         <div class="table-box">
                         <!--<Primeng-TurboTable-Start>-->
                         <div class="task-table" [busyIf]="primengTableHelper.isLoading">
@@ -297,7 +297,7 @@
                             <div class="form-group " [ngClass]="{'disabled':!monthStatus}">
                                 <label>{{"Comments" | localize}}</label>
                                 <input hidden type="file" (change)="uploadCommentFile($event)" #commentFile>        
-                                <div class="border-left border-bottom border-right">
+                                <div class="border-left border-bottom border-right rounded">
                                     <p-editor [(ngModel)]="comment"
                                                 (keydown.space)="$event.preventDefault();"name="HtmlEditorInput" 
                                                 [style]="{'height':'230px','border':'none'}">
