--- a/angular/src/app/main/reconcilliation/itemized/itemized-details/itemized-details.component.html
+++ b/angular/src/app/main/reconcilliation/itemized/itemized-details/itemized-details.component.html
@@ -95,7 +95,7 @@
                                 <div class="form-group " [ngClass]="{'disabled':!monthStatus}">
                                     <label>{{"Comments" | localize}}</label>
                                     <input hidden type="file" (change)="uploadCommentFile($event)" #commentFile>        
-                                        <div class="border-left border-bottom border-right">
+                                        <div class="border-left border-bottom border-right rounded">
                                             <p-editor [(ngModel)]="comment"
                                                 (keydown.space)="$event.preventDefault();"name="HtmlEditorInput" 
                                                 [style]="{'height':'230px','border':'none'}">
