--- a/angular/src/app/main/checklist/task-details/task-details.component.html
+++ b/angular/src/app/main/checklist/task-details/task-details.component.html
@@ -167,7 +167,7 @@
                                             </ul>
                                         </div>
 
-                                 <div class="btnMargin">
+                                 <div class="mt-3 d-flex justify-content-end">
                                     <button class="btn btn-brand"
                                         (click)="onComment()">{{"Comment" | localize}}</button>
                                     <!-- <button class="btn btn-brand"
@@ -205,7 +205,7 @@
                                 <h5>Activity</h5>
                             </div>
                             <tabset class="tab-container tabbable-line" style="height: auto;">
-                                <tab heading="{{'Comment' | localize}}">
+                                <tab heading="{{'Comments' | localize}}">
                                         <div class="kt-widget3" style="height: auto !important;">
                                             <div *ngFor="let i of commentsData" class="kt-widget3__item ">
                                                 <div class="comments-header kt-widget3__header">
