Amortized details and Itomized details UI fixed

--- a/angular/src/app/main/checklist/edit-task/edit-task.component.html
+++ b/angular/src/app/main/checklist/edit-task/edit-task.component.html
@@ -280,7 +280,7 @@
                                 </div> -->
                             </div>
                         </div>
-                        <div class="col-md-5">
+                        <div class="col-md-5 form-group">
                             
                             <div [ngClass]="{'disabled':!monthStatus}" class="pt-4">
                                 <label>{{"Attachments" | localize}}</label>
@@ -300,7 +300,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-10">
+                        <div class="col-md-10 form-group">
                             <label>{{"Instruction" | localize}}</label>
                             <!-- <div class="form-group">
                                 <p-editor [(ngModel)]="getTaskForEdit.instructionBody" name="HtmlEditorInput"
