--- a/angular/src/app/main/reconcilliation/amortized/amortized-details/amortized-details.component.css
+++ b/angular/src/app/main/reconcilliation/amortized/amortized-details/amortized-details.component.css
@@ -268,7 +268,7 @@ justify-content: center;
 }
 .chat-wrapper{
     
-    padding :0px 30px !important;
+    padding-left : 10px !important;
     overflow-y: auto;
 }
 
@@ -282,7 +282,7 @@ ul, ul li {
     }
     ul {
         list-style: none;
-        width: 100%;
+        width: 85%;
         padding :0px;
         margin:0px;
         border:none;
@@ -294,6 +294,7 @@ ul, ul li {
         border:none;
         *display: inline;
     }
+
 /* .drop_down_arrow {
     margin-left: 135px;
 } */
