--- a/angular/src/app/main/reconcilliation/itemized/itemized-details/itemized-details.component.html
+++ b/angular/src/app/main/reconcilliation/itemized/itemized-details/itemized-details.component.html
@@ -36,13 +36,13 @@
                                 <div class="item-card-box d-flex flex-wrap">
                                     <div class="item-card rounded mr-3 mb-3">
                                         <img src="../../../../assets/img/calendar-o.svg" alt="bill" class="my-3">
-                                        <span class="d-block mb-1 text-navyblue item-card-title">{{"Date" | localize}}</span>
-                                        <span class="d-block text-lightgrey">{{itemizationDto.date | date}}</span>
+                                        <span class="d-block mb-1 text-navyblue font-weight-bold item-card-title">{{"Date" | localize}}</span>
+                                        <span class="d-block text-navyblue">{{itemizationDto.date | date}}</span>
                                     </div>
                                     <div class="item-card rounded mr-3 mb-3">
                                         <img src="../../../../assets/img/money.svg" alt="bill" class="my-3">
-                                        <span class="d-block mb-1 text-navyblue item-card-title">{{"Amount" | localize}}</span>
-                                        <span class="d-block text-lightgrey">$ {{itemizationDto.amount | formater}}</span>
+                                        <span class="d-block mb-1 text-navyblue font-weight-bold item-card-title">{{"Amount" | localize}}</span>
+                                        <span class="d-block text-navyblue">$ {{itemizationDto.amount | formater}}</span>
                                     </div>
                                 </div>
                             </div>
@@ -50,13 +50,13 @@
                                 <div class="item-card-box d-flex flex-wrap">
                                     <div class="item-card rounded mr-3 mb-3">
                                         <img src="../../../../assets/img/bill.svg" alt="bill" class="my-3">
-                                        <span class="d-block mb-1 text-navyblue item-card-title">{{"InvoiceNo" | localize}}.</span>
-                                        <span class="d-block text-lightgrey">{{itemizationDto.inoviceNo}}</span>
+                                        <span class="d-block mb-1 text-navyblue font-weight-bold item-card-title">{{"InvoiceNo" | localize}}.</span>
+                                        <span class="d-block text-navyblue">{{itemizationDto.inoviceNo}}</span>
                                     </div>
                                     <div class="item-card rounded mr-3 mb-3">
                                         <img src="../../../../assets/img/calendar-o.svg" alt="bill" class="my-3">
-                                        <span class="d-block mb-1 text-navyblue item-card-title">{{"Journal Entry No" | localize}}.</span>
-                                        <span class="d-block text-lightgrey">{{itemizationDto.journalEntryNo}}</span>
+                                        <span class="d-block mb-1 text-navyblue font-weight-bold item-card-title">{{"Journal Entry No" | localize}}.</span>
+                                        <span class="d-block text-navyblue">{{itemizationDto.journalEntryNo}}</span>
                                     </div>
                                 </div>
                             </div>
