--- a/angular/src/app/main/checklist/createtask/createtask.component.css
+++ b/angular/src/app/main/checklist/createtask/createtask.component.css
@@ -83,7 +83,7 @@ label{
 }
 .chat-wrapper{
     
-    padding :0px 30px !important;
+    padding-left : 10px !important;
     overflow-y: auto;
 }
 
@@ -97,7 +97,7 @@ ul, ul li {
     }
     ul {
         list-style: none;
-        width: 100%;
+        width: 85%;
         padding :0px;
         margin:0px;
         border:none;
