--- a/angular/src/app/main/reconcilliation/amortized/amortized-details/amortized-details.component.html
+++ b/angular/src/app/main/reconcilliation/amortized/amortized-details/amortized-details.component.html
@@ -36,28 +36,28 @@
                                 <div class="item-card-box d-flex flex-wrap">
                                     <div class="item-card rounded mr-3 mb-3">
                                         <img src="../../../../assets/img/calendar-o.svg" alt="bill" class="my-3">
-                                        <span class="d-block mb-1 text-navyblue item-card-title">{{"Start Date" | localize}}</span>
-                                        <span class="d-block text-lightgrey">{{amortizationDto.startDate | date}}</span>
+                                        <span class="d-block mb-1 text-navyblue font-weight-bold item-card-title">{{"Start Date" | localize}}</span>
+                                        <span class="d-block text-navyblue"> {{amortizationDto.startDate | date}}</span>
                                     </div>
                                     <div class="item-card rounded mr-3 mb-3">
                                         <img src="../../../../assets/img/calendar-o.svg" alt="bill" class="my-3">
-                                        <span class="d-block mb-1 text-navyblue item-card-title">{{"End Date" | localize}}</span>
-                                        <span class="d-block text-lightgrey">{{amortizationDto.endDate | date}}</span>
+                                        <span class="d-block mb-1 text-navyblue font-weight-bold item-card-title">{{"End Date" | localize}}</span>
+                                        <span class="d-block text-navyblue">{{amortizationDto.endDate | date}}</span>
                                     </div>
                                     <div class="item-card rounded mr-3 mb-3">
                                         <img src="../../../../assets/img/money.svg" alt="bill" class="my-3">
-                                        <span class="d-block mb-1 text-navyblue item-card-title">{{"Beginning Amount" | localize}}</span>
-                                        <span class="d-block text-lightgrey">$ {{amortizationDto.amount | formater}}</span>
+                                        <span class="d-block mb-1 text-navyblue font-weight-bold item-card-title">{{"Beginning Amount" | localize}}</span>
+                                        <span class="d-block text-navyblue">$ {{amortizationDto.amount | formater}}</span>
                                     </div>
                                     <div class="item-card rounded mr-3 mb-3">
                                         <img src="../../../../assets/img/money.svg" alt="bill" class="my-3">
-                                        <span class="d-block mb-1 text-navyblue item-card-title">{{"Accrued Amortization" | localize}}</span>
-                                        <span class="d-block text-lightgrey">$ {{accuredAmount | formater}}</span>
+                                        <span class="d-block mb-1 text-navyblue font-weight-bold item-card-title">{{"Accrued Amortization" | localize}}</span>
+                                        <span class="d-block text-navyblue">$ {{accuredAmount | formater}}</span>
                                     </div>
                                     <div class="item-card rounded mr-3 mb-3">
                                         <img src="../../../../assets/img/money.svg" alt="bill" class="my-3">
-                                        <span class="d-block mb-1 text-navyblue item-card-title">{{"Net Amount" | localize}}</span>
-                                        <span class="d-block text-lightgrey">$ {{netAmount | formater}}</span>
+                                        <span class="d-block mb-1 text-navyblue font-weight-bold item-card-title">{{"Net Amount" | localize}}</span>
+                                        <span class="d-block text-navyblue">$ {{netAmount | formater}}</span>
                                     </div>
                                 </div>
                             </div>
@@ -65,13 +65,13 @@
                                 <div class="item-card-box d-flex flex-wrap">
                                     <div class="item-card rounded mr-3 mb-3">
                                         <img src="../../../../assets/img/bill.svg" alt="bill" class="my-3">
-                                        <span class="d-block mb-1 text-navyblue item-card-title">{{"Invoice No" | localize}}.</span>
-                                        <span class="d-block text-lightgrey">{{amortizationDto.inoviceNo}}</span>
+                                        <span class="d-block mb-1 text-navyblue font-weight-bold item-card-title">{{"Invoice No" | localize}}.</span>
+                                        <span class="d-block text-navyblue ">{{amortizationDto.inoviceNo}}</span>
                                     </div>
                                     <div class="item-card rounded mr-3 mb-3">
                                         <img src="../../../../assets/img/calendar-o.svg" alt="bill" class="my-3">
-                                        <span class="d-block mb-1 text-navyblue item-card-title">{{"Journal Entry No" | localize}}.</span>
-                                        <span class="d-block text-lightgrey">{{amortizationDto.journalEntryNo}}</span>
+                                        <span class="d-block mb-1 text-navyblue font-weight-bold item-card-title">{{"Journal Entry No" | localize}}.</span>
+                                        <span class="d-block text-navyblue">{{amortizationDto.journalEntryNo}}</span>
                                     </div>
                                 </div>
                             </div>
