--- a/angular/src/app/main/reconcilliation/amortized/create-edit-amortized/create-edit-amortized.component.css
+++ b/angular/src/app/main/reconcilliation/amortized/create-edit-amortized/create-edit-amortized.component.css
@@ -139,7 +139,7 @@ color: #606060;
 }
 .chat-wrapper{
     
-    padding :0px 30px !important;
+    padding-left : 10px !important;
     overflow-y: auto;
 }
 
@@ -153,7 +153,7 @@ ul, ul li {
     }
     ul {
         list-style: none;
-        width: 100%;
+        width: 85%;
         padding :0px;
         margin:0px;
         border:none;
@@ -165,6 +165,7 @@ ul, ul li {
         border:none;
         *display: inline;
     }
+
 /* .drop_down_arrow {
     margin-left: 135px;
 } */
